# axi

./: Cargo.toml  LICENSE-MIT  README.md  TODO.md
apps/axi/: Cargo.toml
apps/axi-embedded/: Cargo.toml
apps/axi-web/: Cargo.toml
apps/axi/src/: main.rs
crates/axi-cli/: Cargo.toml
crates/axi-cli/src/: lib.rs  main.rs
crates/axi-core/: Cargo.toml
crates/axi-core/src/: chunk.rs  lexer.rs  lib.rs  optimizer.rs  parser.rs  vm.rs
crates/axi-core/tests/: eval.rs
crates/axi-gui/: Cargo.toml
crates/axi-num/: Cargo.toml
crates/axi-num/src/: lib.rs  number.rs  types.rs
crates/axi-num/src/types/: number.rs  tensor.rs
crates/axi-tui/: Cargo.toml
crates/axi-types/: Cargo.toml
