[workspace]
members = [ "apps/*", "crates/*" ]
resolver = "2"

[workspace.dependencies]
axi-embedded = { path = "apps/axi-embedded" }
axi-web      = { path = "apps/axi-web" }
axi          = { path = "apps/axi " }

axi-types = { path = "crates/axi-types" }
axi-core  = { path = "crates/axi-core" }
axi-num   = { path = "crates/axi-num" }
axi-tui   = { path = "crates/axi-tui" }
axi-gui   = { path = "crates/axi-gui" }

[profile.release]
opt-level = 3
lto = true
strip = true
